[package]
name = "jmap"
version = "0.11.7"
edition = "2024"
resolver = "2"

[dependencies]
store = { path = "../store" }
nlp = { path = "../nlp" }
jmap_proto = { path = "../jmap-proto" }
smtp = { path =  "../smtp" }
utils = { path =  "../utils" }
common = { path =  "../common" }
directory = { path =  "../directory" }
trc = { path = "../trc" }
spam-filter = { path = "../spam-filter" }
email = { path = "../email" }
smtp-proto = { version = "0.1" }
mail-parser = { version = "0.10", features = ["full_encoding", "serde_support"] } 
mail-builder = { version = "0.4" }
mail-send = { version = "0.5", default-features = false, features = ["cram-md5", "ring", "tls12"] }
mail-auth = { version = "0.6", features = ["generate"] }
sieve-rs = { version = "0.6" } 
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
form_urlencoded = "1.1.0"
tokio = { version = "1.23", features = ["rt"] }
bincode = "1.3.3"
form-data = { version = "0.6.0", features = ["sync"], default-features = false }
mime = "0.3.17"
futures-util = "0.3.28"
async-stream = "0.3.5"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12.3"
sha1 = "0.10"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"]}
tokio-tungstenite = "0.26"
tungstenite = "0.26"
chrono = "0.4"
rand = "0.9.0"
pkcs8 = { version = "0.10.2", features = ["alloc", "std"] }
lz4_flex = { version = "0.11", default-features = false }
rev_lines = "0.3.0"
x509-parser = "0.16.0"
quick-xml = "0.37"
memory-stats = "1.2.0"
aes-gcm = "0.10.1"
aes-gcm-siv = "0.11.1"
rsa = "0.9.2"

[features]
test_mode = []
enterprise = []
