[package]
name = "mail-server"
description = "Stalwart Mail Server"
authors = [ "Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/jmap-server"
homepage = "https://stalw.art"
keywords = ["imap", "jmap", "smtp", "email", "mail", "server"]
categories = ["email"]
license = "AGPL-3.0-only OR LicenseRef-SEL"
version = "0.9.3"
edition = "2021"
resolver = "2"

[[bin]]
name = "stalwart-mail"
path = "src/main.rs"

[dependencies]
store = { path = "../store" }
jmap = { path = "../jmap" }
jmap_proto = { path = "../jmap-proto" }
smtp = { path = "../smtp" }
imap = { path = "../imap" }
pop3 = { path = "../pop3" }
managesieve = { path = "../managesieve" }
common = { path = "../common" }
directory = { path = "../directory" }
trc = { path = "../trc" }
utils = { path = "../utils" }
tokio = { version = "1.23", features = ["full"] }


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[features]
default = ["sqlite", "postgres", "mysql", "rocks", "elastic", "s3", "redis", "enterprise"]
#default = ["sqlite", "postgres", "mysql", "rocks", "elastic", "s3", "redis", "foundationdb", "enterprise"]
sqlite = ["store/sqlite"]
foundationdb = ["store/foundation", "common/foundation"]
postgres = ["store/postgres"]
mysql = ["store/mysql"]
rocks = ["store/rocks"]
elastic = ["store/elastic"]
s3 = ["store/s3"]
redis = ["store/redis"]
enterprise = ["jmap/enterprise", "common/enterprise", "store/enterprise"]
