[package]
name = "managesieve"
version = "0.8.2"
edition = "2021"
resolver = "2"

[dependencies]
imap_proto = { path = "../imap-proto" }
imap = { path = "../imap" }
jmap = { path = "../jmap" }
jmap_proto = { path = "../jmap-proto" }
directory = { path = "../directory" }
common = { path = "../common" }
store = { path = "../store" }
utils = { path = "../utils" }
mail-parser = { version = "0.9", features = ["full_encoding", "ludicrous_mode"] } 
mail-send = { version = "0.4", default-features = false, features = ["cram-md5"] }
sieve-rs = { version = "0.5" } 
rustls = "0.22"
rustls-pemfile = "2.0"
tokio = { version = "1.23", features = ["full"] }
tokio-rustls = { version = "0.25.0"}
parking_lot = "0.12"
tracing = "0.1"
ahash = { version = "0.8" }
md5 = "0.7.0"
bincode = "1.3.3"


[features]
test_mode = []
