[package]
name = "managesieve"
version = "0.9.0"
edition = "2021"
resolver = "2"

[dependencies]
imap_proto = { path = "../imap-proto" }
imap = { path = "../imap" }
jmap = { path = "../jmap" }
jmap_proto = { path = "../jmap-proto" }
directory = { path = "../directory" }
common = { path = "../common" }
store = { path = "../store" }
utils = { path = "../utils" }
trc = { path = "../trc" }
mail-parser = { version = "0.9", features = ["full_encoding", "ludicrous_mode"] } 
mail-send = { version = "0.4", default-features = false, features = ["cram-md5", "ring", "tls12"] }
sieve-rs = { version = "0.5" } 
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2.0"
tokio = { version = "1.23", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
parking_lot = "0.12"
ahash = { version = "0.8" }
md5 = "0.7.0"
bincode = "1.3.3"


[features]
test_mode = []
