[package]
name = "maybe-async"
version = "0.2.7"
authors = [ "Guoli Lyu <guoli-lv@hotmail.com>" ]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A procedure macro to unify SYNC and ASYNC implementation"
repository = "https://github.com/fMeow/maybe-async-rs"
documentation = "https://docs.rs/maybe-async"
keywords = [ "maybe", "async", "futures", "macros", "proc_macro" ]
resolver = "2"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

  [dependencies.syn]
  version = "1.0"
  features = [ "visit-mut", "full" ]

[lib]
proc-macro = true

[features]
default = [ ]
is_sync = [ ]
