[package]
name = "nlp"
version = "0.8.5"
edition = "2021"
resolver = "2"

[dependencies]
utils = { path = "../utils" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
farmhash = "1.1.5"
siphasher = "1.0"
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3.3"
nohash = "0.2.0"
ahash = "0.8.3"
lazy_static = "1.4"
whatlang = "0.16" # Language detection
rust-stemmers = "1.2" # Stemmers
tinysegmenter = "0.1" # Japanese tokenizer
jieba-rs = "0.7" # Chinese stemmer
phf = { version = "0.11", features = ["macros"] }
lru-cache = "0.1.2"
parking_lot = "0.12.1"

[features]
test_mode = []

[dev-dependencies]
tokio = { version = "1.23", features = ["full"] }
