[package]
name = "nlp"
version = "0.11.5"
edition = "2024"
resolver = "2"

[dependencies]
utils = { path =  "../utils" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
farmhash = "1.1.5"
siphasher = "1.0"
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3.3"
nohash = "0.2.0"
ahash = { version = "0.8.3", features = ["serde"] }
whatlang = "0.16" # Language detection
rust-stemmers = "1.2" # Stemmers
jieba-rs = "0.7" # Chinese stemmer
lru-cache = "0.1.2"
parking_lot = "0.12.1"
psl = "2"
radix_trie = "0.2.1"
maplit = "1.0.2"
hashify = "0.2.1"

[features]
test_mode = []

[dev-dependencies]
tokio = { version = "1.23", features = ["full"] }
