[package]
name = "pop3"
version = "0.8.5"
edition = "2021"
resolver = "2"

[dependencies]
store = { path = "../store" }
common = { path = "../common" }
jmap = { path = "../jmap" }
imap = { path = "../imap" }
utils = { path = "../utils" }
trc = { path = "../trc" }
jmap_proto = { path = "../jmap-proto" }
mail-parser = { version = "0.9", features = ["full_encoding", "ludicrous_mode"] } 
mail-send = { version = "0.4", default-features = false, features = ["cram-md5", "ring", "tls12"] }
tracing = "0.1"
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring", "tls12"] }
tokio = { version = "1.23", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

[features]
test_mode = []
