[package]
name = "procotol"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "/home/vagrant/code/utils" }
fast-float = "0.2.0"
serde = { version = "1.0", features = ["derive"]}
ahash = { version = "0.8.0", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
