[package]
name = "services"
version = "0.11.5"
edition = "2024"
resolver = "2"

[dependencies]
store = { path = "../store" }
common = { path =  "../common" }
utils = { path =  "../utils" }
trc = { path = "../trc" }
email = { path = "../email" }
smtp = { path = "../smtp" }
jmap_proto = { path = "../jmap-proto" }
directory = { path =  "../directory" }
tokio = { version = "1.23", features = ["rt"] }
mail-parser = { version = "0.10", features = ["full_encoding", "serde_support"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
memory-stats = "1.2.0"
aes-gcm = "0.10.1"
aes-gcm-siv = "0.11.1"
rsa = "0.9.2"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12.3"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"]}
base64 = "0.22"

[dev-dependencies]

[features]
test_mode = []
enterprise = []
